# aqua_db

./: .gitignore  Cargo.toml  README.md  schema.example.json
src/: catalog.rs  executor.rs  lib.rs  main.rs  query.rs  storage.rs
src/storage/: buffer_pool.rs  buffer_pool_manager.rs  descriptors.rs  disk_manager.rs  hash_table.rs  page.rs  replacer.rs  tuple.rs
