[package]
name = "aqua_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
lru = "0.7.5"
serde_json = "1.0.81"
serde = "1.0.137"
serde_derive = "1.0"
reqwest = {version = "0.11.0", features = ["blocking"]}

[dev-dependencies]


[[bin]]
name = "client"
